# testEcommerceProject

./: .gitignore  README.md  pyproject.toml
actions/: mouse_actions.py
pages/: base_page.py  check_out_page.py  check_out_page_locators.py  index_page.py  index_page_locators.py  items_description_page.py  items_description_page_locators.py  login_page.py  login_page_locators.py  men_jackets_page.py  men_jackets_page_locators.py  men_shorts_page.py  men_shorts_page_locators.py  place_order_page.py  place_order_page_locators.py  place_order_success_page.py  place_order_success_page_locators.py  view_cart_page.py  view_cart_page_locators.py  women_hoodies_page.py  women_hoodies_page_locators.py  women_pants_page.py  women_pants_page_locators.py
resources/: constants.py
tests/: conftest.py  test_01_add_men_items.py  test_01_add_women_items.py  test_01_login.py  test_02_add_men_items.py  test_02_add_women_items.py  test_03_add_men_items.py  test_03_edit_cart.py  test_04_edit_cart.py  test_04_place_order.py  test_05_place_order.py
